frontend/core/src/main/webapp/static/less/layout.less
/* ... */
// 1. .container-content--after inside swiper is absolutely positioned
//    so it needs to be positioned to the bottom of the content-container.
//    NOTE: Override programmatically if footer height is different.
//          See http://css-tricks.com/snippets/css/sticky-footer/
.container-master .container-content--after {
  bottom: -@height-footer;  // [1]
}


/*
*************************************************************
# Editor footer
*/

// 1. Set white background to hide stuff below.
// 2. Editor footer is at the bottom.
// 3. Varying height.
.container-content--after.editor-footer {
  background-color: white;  // [1]
  bottom: 0;    // [2]
  height: auto; // [3]
}

/*
* Optional outer element to wrap container-content and container-content--after.
* Needed only for swiper elements
*/
// 1. To get drawer handle to work, height needs to be set
.container-content--outer {
  height: inherit; // [1]
}

// 1. Default height for footer. NOTE: Override programmatically if footer height is different.
.container-content--after {
  height: @height-footer; // [1]
}

// 1. Put toaster to the bottom of its parent, .container-master or .container-editor
// 2. Center toaster
// 3. Set height and color
.container-toaster {
  position: absolute; // [1]
  bottom: 0; // [1]
  .center-horizontally-absolute; // [2]
  max-width: @width-column-max; // [2]
  height: @grid-vertical; // [3]
  line-height: @grid-vertical; // [3]
  background-color: @color-background-toaster; // [3]
}

/*
**************************************************************************
# LEVEL 5: Secondary Containers (content, toolbar, titlebar)
*/

// 1. Align all secondary containers horizontally
// 2. Set maximum width.
.container-content, .container-content--after {
  .center-horizontally;         // [1]
  max-width: @width-column-max; // [2]
}

// < save
//    title
//  inbox task note list
// 1. Fluid container height
.container-titlebar, .container-toolbar {
  display: table-row; /* [1] */
}

// 1. Set content inside wrapper and center horizontally with max-width,
//    because .container-toolbar has display: table-row which can not(?) be centered horizontally in CSS.
.container-toolbar--inner, .container-titlebar--inner {
  max-width: @width-column-max; // [1]
  .center-horizontally;         // [1]
}

/*
`.container-content` specifies the vertical overflow.
*/

// 1. Use native-style scrolling in WebKit browsers
.container-content {
  -webkit-overflow-scrolling: touch;  // [1]
  height: 100%;
  overflow-y: auto;
}

/*
`.container-tooblar` specifies height for toolbar.
*/

// 1. Override @grid-vertical height.
.container-toolbar {
  height: @height-container-toolbar;  // [1]
}

/*
**************************************************************************
# LEVEL 6: row and groups
*/

// 1. Vertically and horizontally align the content of the middle element.
// Works with <a><span></span></a> structure. Unfortunately a <button> element does not work here
// because that buttons don't work with display:table*. Bootstrap has a similar solution:
// http://getbootstrap.com/components/#input-groups-buttons
.row-form,
.group-mixed--middle:first-child {
  & > a{                        // [1]
    display: table;
    width: 100%;
    & > span{                   // [1]
      height: inherit;
      vertical-align: middle;
    }
  }
}

@width-button-gap: 10px;

/*
`.row` is uses horizontal alignment. It specifies the left and right
margin.
*/
.row {
  width: 100%;
  padding-left: @grid-horizontal;
  padding-right: @grid-horizontal;
}

.row-form {
  .row;
  line-height: @grid-vertical;
}

.row-padded {
  .row();
  height: auto;
  & > a > span {
    margin-bottom: @grid-vertical-half;
  }
}

// 1. Set padding-bottom to mimic height of .row-padded.
//    43px + 21px is not the correct value but near.
.group-mixed.bottom-padded {
  padding-bottom: 21px; // [1]
}

.group-mixed--right.top {
  vertical-align: top;
}

/*
Class `.group-btn` groups automatically button elements horizontally. Works for 1 and 2 buttons.

```markup
<div class="group-btn" style="width: 100%;">
  <button style="background: gray;">&nbsp;</button>
  <button style="background: red;">&nbsp;</button>
</div>
<div class="group-btn" style="width: 100%;">
  <button style="background: gray;">&nbsp;</button>
</div>
```
*/
.group-btn {
  button:first-child:nth-last-child(1) {
    width: 100%;
  }
  button:first-child:nth-last-child(2),
  button:first-child:nth-last-child(2) ~ button {
    width: 50%;
    float: left;
  }
  button:first-child:nth-last-child(2) {
    padding-right: @width-button-gap / 2;
  }
  button:first-child:nth-last-child(2) ~ button {
    padding-left: @width-button-gap / 2;
  }
}

/*
Class `.group-link` groups automatically a elements horizontally. Works for 7 and 9 links.

```markup
<div class="group-link" style="width: 100%;">
  <a href style="background: gray;">&nbsp;</a>
  <a href style="background: red;">&nbsp;</a>
  <a href style="background: gray;">&nbsp;</a>
  <a href style="background: red;">&nbsp;</a>
  <a href style="background: gray;">&nbsp;</a>
  <a href style="background: red;">&nbsp;</a>
  <a href style="background: gray;">&nbsp;</a>
  <a href style="background: red;">&nbsp;</a>
  <a href style="background: gray;">&nbsp;</a>
</div>
<div class="group-link" style="width: 100%;">
  <a href style="background: gray;">&nbsp;</a>
  <a href style="background: red;">&nbsp;</a>
  <a href style="background: gray;">&nbsp;</a>
  <a href style="background: red;">&nbsp;</a>
  <a href style="background: gray;">&nbsp;</a>
  <a href style="background: red;">&nbsp;</a>
  <a href style="background: gray;">&nbsp;</a>
</div>
```
*/
.group-link {
  text-align: center;
  a:first-child:nth-last-child(7),
  a:first-child:nth-last-child(7) ~ a {
    width: 14.2857%;
    float: left;
  }
  a:first-child:nth-last-child(9),
  a:first-child:nth-last-child(9) ~ a {
    width: 11.111%;
    float: left;
  }
}
/* ... */

